[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"
authors = ["Fredrik Andersson <f.anderzon@gmail.com>"]

[dependencies]
rust_redux = { path = "../.." }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
